--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test node test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hotmeshio/pluck": "^0.0.15",
+    "@hotmeshio/pluck": "^0.0.19",
     "ioredis": "^5.3.2",
     "redis": "^4.6.10"
   }
