readme; docker updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
-version: '3'
 services:
   sandbox:
     build: .
+    develop:
+      watch:
+      - action: sync
+        path: .
+        target: /home/node/app
+        ignore:
+          - node_modules/
+      - action: rebuild
+        path: package.json
     ports:
       - "3000:3000"
     container_name: sandbox
@@ -9,17 +17,27 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
     volumes:
       - ./:/app
 
   redis:
-    image: redis/redis-stack:latest
-    command: ["redis-server", "--requirepass", "key_admin", "--loadmodule", "/opt/redis-stack/lib/redisearch.so"]
+    image: redis/redis-stack:7.2.0-v10
+    platform: linux/amd64
+    environment:
+      REDIS_ARGS: "--requirepass key_admin"
     ports:
       - "6379:6379"
+      - "8001:8001"
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
+      test: ["CMD", "redis-cli", "-h", "localhost", "-p", "6379", "-a", "key_admin", "ping"]
+      interval: 5s
       timeout: 10s
       retries: 3
+    volumes:
+      - redis_data:/data
+
+volumes:
+  redis_data:
+    driver: local
