adds valkey dragonfly

--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "demo:ts:pluck": "NODE_ENV=test HMSH_BLOCK_TIME_MS=5000 ts-node demos/ts/pluck/index.ts",
     "open:redis": "open http://localhost:8001",
     "docker:up": "npm run _copy_env_example; npm run _docker:build:up",
+    "docker:up:dragonfly": "npm run _copy_env_example; npm run _docker:build:up:dragonfly",
+    "docker:up:valkey": "npm run _copy_env_example; npm run _docker:build:up:valkey",
     "docker:down": "docker compose down",
     "docker:logs": "docker compose logs -f",
     "docker:logs:sandbox": "docker compose logs -f sandbox",
     "docker:logs:redis": "docker compose logs -f redis",
     "docker:reset-redis": "docker compose down -v && npm run docker:up",
+    "docker:reset-redis:dragonfly": "docker compose down -v && npm run docker:up:dragonfly",
+    "docker:reset-redis:valkey": "docker compose down -v && npm run docker:up:valkey",
     "docker:demo:js:hotmesh": "docker compose exec sandbox npm run demo:js:hotmesh",
     "docker:demo:js:durable": "docker compose exec sandbox npm run demo:js:durable",
     "docker:demo:js:pluck": "docker compose exec sandbox npm run demo:js:pluck",
     "docker:demo:ts:hotmesh": "docker compose exec sandbox npm run demo:ts:hotmesh",
     "docker:demo:ts:durable": "docker compose exec sandbox npm run demo:ts:durable",
     "docker:demo:ts:pluck": "docker compose exec sandbox npm run demo:ts:pluck",
-    "_docker:build:up": "docker compose watch",
+    "_docker:build:up": "docker-compose up --build -d",
+    "_docker:build:up:dragonfly": "docker-compose -f docker-compose.dragonflydb.yml up --build -d",
+    "_docker:build:up:valkey": "docker-compose -f docker-compose.valkey.yml up --build -d",
     "_copy_env_example": "cp -n env.example .env"
   },
   "keywords": [
