--- a/docker-compose.dragonflydb.yml
+++ b/docker-compose.dragonflydb.yml
@@ -18,6 +18,7 @@ services:
       - REDIS_PORT=6379
     volumes:
       - ./:/app
+      - /app/node_modules
 
   redis:
     image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
