--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
         condition: service_healthy
     volumes:
       - ./:/app
+      - /app/node_modules
 
   redis:
     image: redis/redis-stack:7.2.0-v10
