--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "keywords": [
     "Redis",
+    "ValKey",
+    "DragonflyDB",
     "HotMesh",
     "Temporalio",
     "Durable Workflow",
@@ -42,12 +44,16 @@
   "author": "luke.birdeau@gmail.com",
   "license": "Apache-2.0",
   "dependencies": {
+    "@honeycombio/opentelemetry-node": "^0.7.2",
     "@hotmeshio/pluck": "^0.1.3",
+    "@opentelemetry/auto-instrumentations-node": "^0.47.1",
+    "@opentelemetry/sdk-node": "^0.52.1",
+    "dotenv": "^16.4.5",
     "redis": "^4.6.10"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
     "ts-node": "^10.0.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.0.0"
   }
 }
