--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 #### If running with a clustered Redis backend, set HMSH_IS_CLUSTER to true ####
 # HMSH_IS_CLUSTER=true
 
-##### Log metrics to your chosen honeycomb account #####
+##### Log metrics to your honeycomb account #####
 HONEYCOMB_ENABLED=false
 HONEYCOMB_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 OTEL_SERVICE_NAME=YYYYYYYYY
