--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "samples-javascript",
-  "version": "0.1.7",
+  "version": "0.2.0",
   "description": "HotMesh LifeCycle Sandbox",
   "scripts": {
-    "demo:js:hotmesh": "NODE_ENV=test HMSH_BLOCK_TIME_MS=5000 node demos/js/hotmesh/index.js",
-    "demo:js:durable": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=5000 node demos/js/durable/index.js",
-    "demo:js:pluck": "NODE_ENV=test HMSH_BLOCK_TIME_MS=5000 node demos/js/pluck/index.js",
-    "demo:ts:hotmesh": "NODE_ENV=test HMSH_BLOCK_TIME_MS=5000 ts-node demos/ts/hotmesh/index.ts",
-    "demo:ts:durable": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=5000 ts-node demos/ts/durable/index.ts",
-    "demo:ts:pluck": "NODE_ENV=test HMSH_BLOCK_TIME_MS=5000 ts-node demos/ts/pluck/index.ts",
+    "demo:js:hotmesh": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=5000 node demos/js/hotmesh/index.js",
+    "demo:js:meshflow": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=5000 node demos/js/meshflow/index.js",
+    "demo:js:meshcall": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=500 node demos/js/meshcall/index.js",
+    "demo:js:meshdata": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=5000 node demos/js/meshdata/index.js",
+    "demo:ts:hotmesh": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=5000 ts-node demos/ts/hotmesh/index.ts",
+    "demo:ts:meshflow": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=5000 ts-node demos/ts/meshflow/index.ts",
+    "demo:ts:meshcall": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=500 ts-node demos/ts/meshcall/index.ts",
+    "demo:ts:meshdata": "NODE_ENV=test HMSH_SCOUT_INTERVAL_SECONDS=2 HMSH_BLOCK_TIME_MS=5000 ts-node demos/ts/meshdata/index.ts",
     "open:redis": "open http://localhost:8001",
     "docker:up": "npm run _copy_env_example; npm run _docker:build:up",
     "docker:up:dragonfly": "npm run _copy_env_example; npm run _docker:build:up:dragonfly",
@@ -21,11 +23,13 @@
     "docker:reset-redis:dragonfly": "docker compose down -v && npm run docker:up:dragonfly",
     "docker:reset-redis:valkey": "docker compose down -v && npm run docker:up:valkey",
     "docker:demo:js:hotmesh": "docker compose exec sandbox npm run demo:js:hotmesh",
-    "docker:demo:js:durable": "docker compose exec sandbox npm run demo:js:durable",
-    "docker:demo:js:pluck": "docker compose exec sandbox npm run demo:js:pluck",
+    "docker:demo:js:meshflow": "docker compose exec sandbox npm run demo:js:meshflow",
+    "docker:demo:js:meshcall": "docker compose exec sandbox npm run demo:js:meshcall",
+    "docker:demo:js:meshdata": "docker compose exec sandbox npm run demo:js:meshdata",
     "docker:demo:ts:hotmesh": "docker compose exec sandbox npm run demo:ts:hotmesh",
-    "docker:demo:ts:durable": "docker compose exec sandbox npm run demo:ts:durable",
-    "docker:demo:ts:pluck": "docker compose exec sandbox npm run demo:ts:pluck",
+    "docker:demo:ts:meshflow": "docker compose exec sandbox npm run demo:ts:meshflow",
+    "docker:demo:ts:meshcall": "docker compose exec sandbox npm run demo:ts:meshcall",
+    "docker:demo:ts:meshdata": "docker compose exec sandbox npm run demo:ts:meshdata",
     "_docker:build:up": "docker-compose up --build -d",
     "_docker:build:up:dragonfly": "docker-compose -f docker-compose.dragonflydb.yml up --build -d",
     "_docker:build:up:valkey": "docker-compose -f docker-compose.valkey.yml up --build -d",
@@ -39,13 +43,13 @@
     "Temporalio",
     "Durable Workflow",
     "Distributed Orchestration",
-    "Pluck"
+    "MeshData"
   ],
   "author": "luke.birdeau@gmail.com",
   "license": "Apache-2.0",
   "dependencies": {
     "@honeycombio/opentelemetry-node": "^0.7.2",
-    "@hotmeshio/pluck": "^0.1.7",
+    "@hotmeshio/hotmesh": "^0.2.0",
     "@opentelemetry/auto-instrumentations-node": "^0.47.1",
     "@opentelemetry/sdk-node": "^0.52.1",
     "dotenv": "^16.4.5",
