adds dashboard webapp demo

--- a/env.example
+++ b/env.example
@@ -3,5 +3,12 @@
 
 ##### Log metrics to your honeycomb account #####
 HONEYCOMB_ENABLED=false
-HONEYCOMB_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-OTEL_SERVICE_NAME=YYYYYYYYY
+HONEYCOMB_API_KEY=XXXXXXXXXXXXX
+OTEL_SERVICE_NAME=YYYYYY
+
+OPENAI_API_KEY=sk-ZZZZZZZZZZZZZ
+
+##### Enable/suppress which app-server backends are surfaced by the dashboard
+USE_REDIS=true
+USE_VALKEY=true
+USE_DRAGONFLY=true
